cmake_minimum_required(VERSION 2.8)
project(web_crawler)
set(SOURCE_FILES main.cpp)
add_executable(web_crawler ${SOURCE_FILES} URLFinder.cpp URLFinder.h Curler.cpp Curler.h)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package (CURL)
include_directories(/usr/local/include)
target_link_libraries(web_crawler /usr/local/lib/libgumbo.so)
if (CURL_FOUND)
  include_directories(${CURL_INCLUDE_DIRS})
  target_link_libraries (web_crawler ${CURL_LIBRARIES})
endif (CURL_FOUND)

