cmake_minimum_required(VERSION 2.8)
project(web_crawler)
set(SOURCE_FILES main.cpp)
add_executable(web_crawler ${SOURCE_FILES} URLFinder.cpp URLFinder.h Curler.cpp Curler.h)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package (CURL)
if (CURL_FOUND)
  include_directories(${CURL_INCLUDE_DIRS})
endif (CURL_FOUND)
find_package (Threads)
target_link_libraries (web_crawler ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} -pthread /usr/local/lib/libgumbo.so)
